.metadata/.plugins/org.eclipse.cdt.ui/AES_OPTIGA.build.log
13:20:25 **** Build of configuration Debug for project AES_OPTIGA ****
"D:\\Infineon\\ModusToolbox\\tools_3.3\\modus-shell\\bin\\make" CY_MAKE_IDE=eclipse CY_IDE_TOOLS_DIR=D:/Infineon/ModusToolbox/tools_3.3 CY_IDE_BT_TOOLS_DIR= -j16 --output-sync build_proj 
Tools Directory: D:/Infineon/ModusToolbox/tools_3.3
Searching installed tools in progress...
Searching installed tools complete
Initializing build: mtb-example-empty-app Debug APP_CYSBSYSKIT-DEV-01 GCC_ARM
Toolchain validation: PASS

Prebuild operations complete

Auto-discovery in progress...
Auto-discovery complete
Commencing build operations...

Tools Directory: D:/Infineon/ModusToolbox/tools_3.3

Constructing build rules...
Build rules construction complete

==============================================================================
= Building application =
==============================================================================
Generating compilation database file...
-> ./build/compile_commands.json
Compilation database file generation complete
Building 368 file(s)
Compiling main.c -DCOMPONENT_43012 -DCOMPONENT_APP_CYSBSYSKIT_DEV_01 -DCOMPONENT_CAT1 -DCOMPONENT_CAT1A -DCOMPONENT_CM0P_SLEEP -DCOMPONENT_CM4 -DCOMPONENT_CM4_0 -DCOMPONENT_CYSBSYS_RP01 -DCOMPONENT_Debug -DCOMPONENT_GCC_ARM -DCOMPONENT_HCI_UART -DCOMPONENT_MW_BT_FW_IFX_CYW43012 -DCOMPONENT_MW_CAT1CM0P -DCOMPONENT_MW_CMSIS -DCOMPONENT_MW_CORE_LIB -DCOMPONENT_MW_CORE_MAKE -DCOMPONENT_MW_MTB_HAL_CAT1 -DCOMPONENT_MW_MTB_PDL_CAT1 -DCOMPONENT_MW_OPTIGA_TRUST_M -DCOMPONENT_MW_RECIPE_MAKE_CAT1A -DCOMPONENT_MW_RETARGET_IO -DCOMPONENT_PSOC6_02 -DCOMPONENT_SOFTFP -DCOMPONENT_WIFI_INTERFACE_SDIO -DCORE_NAME_CM4_0=1 -DCY8C624AFNI_S2D43 -DCY_APPNAME_mtb_example_empty_app -DCY_SUPPORTS_DEVICE_VALIDATION -DCY_TARGET_BOARD=APP_CYSBSYSKIT_DEV_01 -DCY_USING_HAL -DDEBUG -DMBEDTLS_USER_CONFIG_FILE='"mbedtls_user_config.h"' -DOPTIGA_LIB_EXTERNAL='"optiga_user_config.h"' -DTARGET_APP_CYSBSYSKIT_DEV_01  -I. -Ibsps/TARGET_APP_CYSBSYSKIT-DEV-01 -Ibsps -Ibsps/TARGET_APP_CYSBSYSKIT-DEV-01/bluetooth -Ibsps/TARGET_APP_CYSBSYSKIT-DEV-01/config/GeneratedSource -Ibsps/TARGET_APP_CYSBSYSKIT-DEV-01/config -IPSOC_OPTIGA_PAL -I../mtb_shared/optiga-trust-m/release-v5.3.0/config -I../mtb_shared/optiga-trust-m/release-v5.3.0 -I../mtb_shared/optiga-trust-m/release-v5.3.0/examples/optiga/include -I../mtb_shared/optiga-trust-m/release-v5.3.0/examples/optiga -I../mtb_shared/optiga-trust-m/release-v5.3.0/examples -I../mtb_shared/optiga-trust-m/release-v5.3.0/examples/optiga/protected_update_data_set -I../mtb_shared/optiga-trust-m/release-v5.3.0/examples/utilities/include -I../mtb_shared/optiga-trust-m/release-v5.3.0/examples/utilities -I../mtb_shared/optiga-trust-m/release-v5.3.0/external/mbedtls/include/mbedtls -I../mtb_shared/optiga-trust-m/release-v5.3.0/external/mbedtls/include -I../mtb_shared/optiga-trust-m/release-v5.3.0/external/mbedtls -I../mtb_shared/optiga-trust-m/release-v5.3.0/external -I../mtb_shared/optiga-trust-m/release-v5.3.0/external/mbedtls/include/psa -I../mtb_shared/optiga-trust-m/release-v5.3.0/external/mbedtls/library -I../mtb_shared/optiga-trust-m/release-v5.3.0/include -I../mtb_shared/optiga-trust-m/release-v5.3.0/include/cmd -I../mtb_shared/optiga-trust-m/release-v5.3.0/include/common -I../mtb_shared/optiga-trust-m/release-v5.3.0/include/comms -I../mtb_shared/optiga-trust-m/release-v5.3.0/include/ifx_i2c -I../mtb_shared/optiga-trust-m/release-v5.3.0/include/pal -I../mtb_shared/retarget-io/release-v1.7.0/include -I../mtb_shared/retarget-io/release-v1.7.0 -I../mtb_shared/cat1cm0p/release-v1.7.0/COMPONENT_CAT1A -I../mtb_shared/cat1cm0p/release-v1.7.0 -I../mtb_shared/cmsis/release-v5.8.1/Core/Include -I../mtb_shared/cmsis/release-v5.8.1/Core -I../mtb_shared/cmsis/release-v5.8.1 -I../mtb_shared/core-lib/release-v1.4.3/include -I../mtb_shared/core-lib/release-v1.4.3 -I../mtb_shared/mtb-hal-cat1/release-v2.6.1/COMPONENT_CAT1A/include/pin_packages -I../mtb_shared/mtb-hal-cat1/release-v2.6.1/COMPONENT_CAT1A/include -I../mtb_shared/mtb-hal-cat1/release-v2.6.1/COMPONENT_CAT1A -I../mtb_shared/mtb-hal-cat1/release-v2.6.1 -I../mtb_shared/mtb-hal-cat1/release-v2.6.1/COMPONENT_CAT1A/include/triggers -I../mtb_shared/mtb-hal-cat1/release-v2.6.1/include -I../mtb_shared/mtb-hal-cat1/release-v2.6.1/include_pvt -I../mtb_shared/mtb-hal-cat1/release-v2.6.1/source -I../mtb_shared/mtb-pdl-cat1/release-v3.13.0/devices/COMPONENT_CAT1A/include -I../mtb_shared/mtb-pdl-cat1/release-v3.13.0/devices/COMPONENT_CAT1A -I../mtb_shared/mtb-pdl-cat1/release-v3.13.0/devices -I../mtb_shared/mtb-pdl-cat1/release-v3.13.0 -I../mtb_shared/mtb-pdl-cat1/release-v3.13.0/devices/COMPONENT_CAT1A/include/ip -I../mtb_shared/mtb-pdl-cat1/release-v3.13.0/drivers/include -I../mtb_shared/mtb-pdl-cat1/release-v3.13.0/drivers -I../mtb_shared/mtb-pdl-cat1/release-v3.13.0/drivers/third_party/ethernet/include -I../mtb_shared/mtb-pdl-cat1/release-v3.13.0/drivers/third_party/ethernet -I../mtb_shared/mtb-pdl-cat1/release-v3.13.0/drivers/third_party 
D:/Infineon/workspace/AES_OPTIGA/main.c: In function 'main':
D:/Infineon/workspace/AES_OPTIGA/main.c:225:148: error: expected expression before ')' token
  225 |         optiga_lib_status_t keyg_status = optiga_crypt_symmetric_generate_key(crypt_inst, OPTIGA_SYMMETRIC_AES_128, OPTIGA_KEY_USAGE_ENCRYPTION,0, );
      |                                                                                                                                                    ^
D:/Infineon/workspace/AES_OPTIGA/main.c:252:138: warning: passing argument 6 of 'optiga_crypt_symmetric_encrypt_ecb' makes pointer from integer without a cast [-Wint-conversion]
  252 |         optiga_lib_status_t ecb_stat=optiga_crypt_symmetric_encrypt_ecb (crypt_inst,OPTIGA_KEY_ID_E0F2 ,plaintext,plaindatalen,encrypted,enctyptedlen );
      |                                                                                                                                          ^~~~~~~~~~~~
      |                                                                                                                                          |
      |                                                                                                                                          uint32_t {aka long unsigned int}
In file included from D:/Infineon/workspace/AES_OPTIGA/main.c:53:
../mtb_shared/optiga-trust-m/release-v5.3.0/include/optiga_crypt.h:1376:15: note: expected 'uint32_t *' {aka 'long unsigned int *'} but argument is of type 'uint32_t' {aka 'long unsigned int'}
 1376 |     uint32_t *encrypted_data_length
      |     ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
make: *** [../mtb_shared/core-make/release-v3.4.1/make/core/main.mk:420: secondstage_build] Error 2
D:/Infineon/workspace/AES_OPTIGA/main.c:223:17: warning: unused variable 'keyBuffer' [-Wunused-variable]
  223 |         uint8_t keyBuffer[128];
      |                 ^~~~~~~~~
make[1]: *** [../mtb_shared/core-make/release-v3.4.1/make/core/build_v1.mk:247: D:/Infineon/workspace/AES_OPTIGA/build/APP_CYSBSYSKIT-DEV-01/Debug/main.o] Error 1
"D:/Infineon/ModusToolbox/tools_3.3/modus-shell/bin/make CY_MAKE_IDE=eclipse CY_IDE_TOOLS_DIR=D:/Infineon/ModusToolbox/tools_3.3 CY_IDE_BT_TOOLS_DIR= -j16 --output-sync build_proj" terminated with exit code 2. Build might be incomplete.

13:20:34 Build Failed. 3 errors, 2 warnings. (took 8s.904ms)

